# actix_diesel_rest_demo

./: .env  Cargo.toml  README.md
migrations/2020-01-28-102241_create_users/: up.sql
migrations/2020-01-28-102245_create_posts/: up.sql
src/: api.rs  db.rs  main.rs  model.rs  schema.rs
