[package]
name = "rest-demo"
version = "0.1.0"
authors = ["赵文祺 <1027572886a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
actix-web = "2.0"
actix-rt = "1.0"
serde_json = "1.0.45"
serde = "1.0.104"
env_logger = "0.7.1"